# roam-agent-eval

./: .gitignore  README.md  combos.json  compare.py  evaluate.py  generate.py  generate.sh  prompts.py  run_eval.py  scoring.py
docs/: index.html
prompts/: _all_prompts.txt  python-etl_roam-cli.txt  python-etl_roam-mcp.txt  python-etl_vanilla.txt  ts-pathfinder_roam-cli.txt  ts-pathfinder_roam-mcp.txt  ts-pathfinder_vanilla.txt
results/: cc-sonnet4.6_astro-landing_vanilla.json  cc-sonnet4.6_cpp-calculator_vanilla.json  cc-sonnet4.6_go-loganalyzer_vanilla.json  cc-sonnet4.6_python-crawler_vanilla.json  cc-sonnet4.6_python-etl_vanilla.json  cc-sonnet4.6_react-todo_vanilla.json  cc-sonnet4.6_ts-pathfinder_vanilla.json  claude-code-sonnet_astro-landing_vanilla.json  claude-code-sonnet_cpp-calculator_vanilla.json  claude-code-sonnet_go-loganalyzer_vanilla.json  claude-code-sonnet_python-crawler_vanilla.json  claude-code-sonnet_react-todo_vanilla.json  claude-code_astro-landing_vanilla.json  claude-code_cpp-calculator_vanilla.json  claude-code_go-loganalyzer_vanilla.json  claude-code_python-crawler_vanilla.json  claude-code_python-etl_vanilla.json  report.html  (+9 more)
workspaces/codex/cpp-calculator_vanilla/: CMakeLists.txt  README.md
workspaces/codex/cpp-calculator_vanilla/include/: AST.h  Calculator.h  Context.h  Evaluator.h  Lexer.h  Parser.h  Repl.h  Token.h
workspaces/codex/cpp-calculator_vanilla/src/: Calculator.cpp  Context.cpp  Evaluator.cpp  Lexer.cpp  Parser.cpp  Repl.cpp  main.cpp
workspaces/codex/cpp-calculator_vanilla/tests/: test_calculator.cpp
